--- a/views/wallet-success.ejs
+++ b/views/wallet-success.ejs
@@ -23,7 +23,7 @@
                           </div>
 
                           <div class="text-center">
-                              <a href="dashboard.php" class="btn btn-common light-green">Continue</a>
+                              <a href="/dashboard" class="btn btn-common light-green">Continue</a>
                           </div>
                         </div>
                  </div>
