--- a/views/header.ejs
+++ b/views/header.ejs
@@ -109,18 +109,11 @@
               </a>
             </li>
              <li class="nav-item">
-              <a class="nav-link" data-toggle="collapse" href="#ui-basic1" aria-expanded="false" aria-controls="ui-basic">
-                <span class="menu-title">Settings</span>
-                <i class="menu-arrow"></i>
-                <i class="mdi mdi-settings menu-icon"></i>
-              </a>
-              <div class="collapse" id="ui-basic1">
-                <ul class="nav flex-column sub-menu">
-                  <li class="nav-item"> <a class="nav-link" href="/profile">Profile</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="/kyc">KYC</a></li>
-                </ul>
-              </div>
-            </li>
+            <a class="nav-link" href="/profile">
+              <span class="menu-title">My Profile</span>
+              <i class="mdi mdi-account menu-icon"></i>
+            </a>
+          </li>
             <li class="nav-item">
               <a class="nav-link" href="/login">
                 <span class="menu-title">logout</span>
