--- a/views/verify-private-key.ejs
+++ b/views/verify-private-key.ejs
@@ -11,7 +11,7 @@
 <section class="dash-inner-sec">
      <div class="row">
              <div class="col-lg-6 col-md-12">
-              <form id="create_wallet_sub" action="/submit-create-wallet" method="POST">
+              <form id="create_wallet_sub" action="submit-create-wallet" method="POST">
                  <div class="dashboard-box wow slideInUp">
                      <div class="create-wallet-block">
                            
