--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -358,7 +358,10 @@
                      </div>
                      </form>
                     </div>
+
+
                     <div class="tab-pane fade" id="info2" role="tabpanel" aria-labelledby="profile-tab">
+                      <form method="POST" action="/submit-change-pass">
                       <div class="dashboard-box">
                         <div class="create-wallet-block profile-input-form">
                             <div class="row">
@@ -391,7 +394,7 @@
                       
                     </div>
                   </div>
-                 
+                </form>
              </div>
         </div>
 </section>
