--- a/views/send-uwct.ejs
+++ b/views/send-uwct.ejs
@@ -112,7 +112,7 @@
               <input type="text" name="" class="form-control">
             </div>
             <div class="text-center mt-4">
-              <a href="send-history.php" class="btn btn-common light-green">Submit</a>
+              <a href="/send-history" class="btn btn-common light-green">Submit</a>
             </div>
           </div>
         </div>
