--- a/views/wallet-success.ejs
+++ b/views/wallet-success.ejs
@@ -13,7 +13,8 @@
                             <h4 class="green-heading">Here is your wallet address.</h4>
 
                           <div class="input-group input-dash copy-id-dash">
-                             <input class="form-control" type="text" placeholder="" value="2798ehgdgdsffsfsfighj9832q787ysuueh">
+                            <input class="form-control" type="text" placeholder="" value="<%= wallet_address %>" readonly>
+                             <!-- <input class="form-control" type="text" placeholder="" value="2798ehgdgdsffsfsfighj9832q787ysuueh"> -->
                              <a href=""><i class="fa fa-copy"></i></a>
                              
                         </div>
