--- a/views/receive.ejs
+++ b/views/receive.ejs
@@ -19,20 +19,30 @@
                            
 
                           <!--   <h4 class="green-heading">Only receive TOKEN to this address sending any other digital asset, will result in permanent loss.</h4> -->
-                           
+<!--                            
                           <div class="input-group input-dash copy-id-dash">
                              <input class="form-control" type="text" placeholder="" value="2798ehgdgdsffsfsfighj9832q787ysuueh">
                              <a href=""><i class="fa fa-copy"></i></a>
                             
+                        </div> -->
+
+                        <div class="input-group input-dash copy-id-dash">
+                            <input class="form-control" type="text" id="address" name="address" value="<%=walletdetails.wallet_address%>" placeholder="2798ehgdgdsghj9832q787ysuueh" readonly>
+                             <a onclick="myFunction()" href="javascript:void(0);"><i class="fa fa-copy"></i></a>
                         </div>
+
                         <div class="clearfix note-line">
                             <span class=""><b><i class="fa fa-info-circle"></i> You can copy/download this address and share it with your friends to receive the funds</b></span>
                           </div>
                       
-
-                          <div class="text-center mlti-btn">
+                          <div class="col-md-12">
+                            <div class="text-center mlti-btn">
+                               <a href="javascript:void(0);" download="wallet_address.txt" id="download" class="btn btn-common light-green">Download</a>
+                         </div>
+                        </div>
+                          <!-- <div class="text-center mlti-btn">
                               <button class="btn btn-common light-green">Download</button>
-                          </div>
+                          </div> -->
                         </div>
                  </div>
              </div>
@@ -61,3 +71,23 @@
 
 
 <%- include('footer') %>
+
+<script type="text/javascript">
+    (function () {
+    var textFile = null,
+      makeTextFile = function (text) {
+        var data = new Blob([text], {type: 'text/plain'});
+        if (textFile !== null) {
+          window.URL.revokeObjectURL(textFile);
+        }
+        textFile = window.URL.createObjectURL(data);
+        return textFile;
+      };
+      var create = document.getElementById('download'),
+        textbox = document.getElementById('address');
+      create.addEventListener('click', function () {
+        var link = document.getElementById('download');
+        link.href = makeTextFile(textbox.value);
+      }, false);
+    })();
+  </script>
