--- a/views/buy-coin.ejs
+++ b/views/buy-coin.ejs
@@ -97,8 +97,8 @@
                           </div>
                       </div>
                   </div>
-                  <input type="hidden" value="<%=eth%>" name="rate_per_artw" id="rate_per_artweth">
-                  <p class="font-italic value-coin-line mx-1 mb-2"> 1 TOKEN = <%=eth%> ETH</p>
+                  <input type="hidden" value="" name="rate_per_artw" id="rate_per_artweth">
+                  <p class="font-italic value-coin-line mx-1 mb-2"> 1 $EBT = ETH</p>
               <!-- <p class="font-italic value-coin-line mt-3 mx-1 mb-2"> <b>1 TOKEN = 23 TRX</b></p> -->
                  <div class="col-md-12 p-0">
                     <div id="tran_wallet">
@@ -115,7 +115,7 @@
                       <div class="row">
                           <label class="control-label col-sm-5">Client Wallet Address<span style="color:red;">*</span></label>
                       <div class="col-sm-7">
-                        <input type="text" class="form-control secure" value="" id="eth_wallet_address" name="eth_wallet_address" data-rule-required="true" data-msg-required="Please enter Ethereum Wallet Address." readonly="" >
+                        <input type="text" class="form-control secure" value="0xF24a24Ab64a29edd50ACC655f4dd78360888A83e" id="eth_wallet_address" name="eth_wallet_address" data-rule-required="true" data-msg-required="Please enter Ethereum Wallet Address." readonly="" >
                       </div>
                       </div>
                     </div>
