--- a/views/send-uwct.ejs
+++ b/views/send-uwct.ejs
@@ -4,7 +4,7 @@
     <h3 class="page-title">
       <span class="page-title-icon bg-gradient-primary text-white mr-2">
         <i class="mdi mdi-home"></i>
-      </span> Send TOKEN </h3>
+      </span> Send $EBT </h3>
   </div>
 
 
@@ -33,11 +33,11 @@
                             <input type="text" class="form-control bg-white" placeholder="0.00">
                             <div class="input-group-append">
                               
-                              <span class="input-group-text bg-white"><img src="assets/images/buy-coin.png" class="img-fluid " style="height: 20px;">&nbsp; TOKEN</span>
+                              <span class="input-group-text bg-white"><img src="assets/images/buy-coin.png" class="img-fluid " style="height: 20px;">&nbsp; $EBT</span>
                             </div>
                           </div>
                         </div>
-                        <p class="text-left"><i class="fa fa-info-circle"></i> <small><b>125</b> <span>TOKEN</span> Reamining. You need minimum balance 00.00 TRX to process this transaction.</small></p>
+                        <p class="text-left"><i class="fa fa-info-circle"></i> <small><b>125</b> <span>$EBT</span> Reamining. You need minimum balance 00.00 TRX to process this transaction.</small></p>
                       </div>
                      <div class="col-md-6"> 
                         <div class="form-group">
