--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -19,7 +19,7 @@
                     <h4 class="font-weight-normal mb-3">Total Worth 
                     </h4>
                     <img src="assets/images/buy-coin.png" class="img-fluid icon-img">
-                    <h2 class="mb-5">$ 15,0000</h2>
+                    <h2 class="mb-5"><%=full_value%></h2>
                   </div>
                 </div>
               </div>
@@ -27,11 +27,11 @@
                 <div class="card bg-gradient-danger card-img-holder text-white">
                   <div class="card-body">
                     <img src="assets/images/other/circle.svg" class="card-img-absolute" alt="circle-image" />
-                    <h4 class="font-weight-normal mb-3">TOKEN 
+                    <h4 class="font-weight-normal mb-3">$EBT 
                     </h4>
                     <img src="assets/images/buy-coin.png" class="img-fluid icon-img">
 
-                    <h2 class="mb-5">TOKEN 15,0000</h2>
+                    <h2 class="mb-5"><%=coinbalance%> $EBT</h2>
                   </div>
                 </div>
               </div>
@@ -42,7 +42,7 @@
                     <h4 class="font-weight-normal mb-3">Rewards Earned  
                     </h4>
                     <img src="assets/images/buy-coin.png" class="img-fluid icon-img">
-                    <h2 class="mb-5">TOKEN 95,5741</h2>
+                    <h2 class="mb-5">$EBT </h2>
                   </div>
                 </div>
               </div>
@@ -53,7 +53,7 @@
                     <h4 class="font-weight-normal mb-3">USDT (TRC20) 
                     </h4>
                     <img src="assets/images/tether.png" class="img-fluid icon-img">
-                    <h2 class="mb-5">USDT 15,0000</h2>
+                    <h2 class="mb-5">USDT 10</h2>
                   </div>
                 </div>
               </div>
@@ -64,7 +64,7 @@
                     <h4 class="font-weight-normal mb-3">ETH
                     </h4>
                     <img src="assets/images/eth-icon.png" class="img-fluid icon-img">
-                    <h2 class="mb-5">ETH 45,6334</h2>
+                    <h2 class="mb-5"><%=ethBalance%></h2>
                   </div>
                 </div>
               </div>
@@ -130,16 +130,19 @@
                         </div>
                         <div class="create-wallet-block mt-4">
                           <div class="input-group input-dash copy-id-dash">
-                             <input class="form-control text-left" type="text" placeholder="" value="2798ehgdgdsffsfsfighj9832q787ysuueh">
+                             <!-- <input class="form-control text-left" type="text" placeholder="" value="2798ehgdgdsffsfsfighj9832q787ysuueh"> -->
+                             <input class="form-control" type="text" id="address" name="address"
+                             value="<%=wallet_details.wallet_address %>" placeholder="" readonly>
                              <a href=""><i class="fa fa-copy"></i></a>
                              <a href=""><i class="fa fa-share"></i></a>
                         </div>
                         </div>
                        
                         <div class="text-center mlti-btn mt-4">
-                              <a href="/send-uwct" class="btn btn-common light-green">Send</a>
+                              <!-- <a href="/send-uwct" class="btn btn-common light-green">Send</a> -->
+                              <a href="/send-uwct" class="btn btn-common light-green" >Send</a>
                               <a href="/buy-coin" class="btn btn-common light-green">Buy</a>
-                              <a href="/receive" class="btn btn-common light-green">Receive</a>
+                              <a href="/receive-artw?walletid=<%-wallet_details._id %>" class="btn btn-common light-green">Receive</a>
                           </div>
                     </div>
                   </div>
@@ -149,14 +152,14 @@
                                   <div class="card-content collapse show">
                                       <div class="card-body">
                                           <div class="font-small-3 token-balance clearfix">
-                                               <h6 class="hbg my-2 text-left">The TOKEN guide</h6>
+                                               <h6 class="hbg my-2 text-left">The $EBT guide</h6>
                                                <ul class="text-left four-step-list">
                                                   <li>This is your universal wallet. Please do remember your private key. In case it is lost, we will not be able to retrieve it and your funds would be locked forever.</li>
-                                                  <li>TOKEN coins are internal currency to our Utopia network where you can contribute.</li>
+                                                  <li>$EBT coins are internal currency to our Utopia network where you can contribute.</li>
                                                   <li>The goal of the Utopia Community is to establish a globally represented  community, that supports diverse projects and helps each other. </li>
                                                   <li>
                                                     One big aspect is the acquisition of land worldwide, either to protect the environment or to create areas where everyone in the Community can live free of charge or take holidays, in accordance with the laws of the respective countries. Thus, we also want to promote alternative lifestyles.
-                                                    Check out our marketplace now! <a href="">The TOKEN</a></li>
+                                                    Check out our marketplace now! <a href="">The $EBT</a></li>
                                                   
                                               </ul>
                                               
