--- a/views/buy-coin.ejs
+++ b/views/buy-coin.ejs
@@ -44,11 +44,11 @@
                                 <div class="font-small-3 token-balance clearfix">
                                      <h6 class="hbg my-2 text-left">5 step guide</h6>
                                      <ol class="text-left four-step-list">
-                                        <li>Calculate how much tokens you want to buy.</li>
+                                        <li>Calculate how much $EBTs you want to buy.</li>
                                         <li>Copy/Scan the displayed address</li>
                                         <li>Send your TRX to that address. You may send it right from your exchange.</li>
-                                        <li>Upon transaction confirmation, please fill in your transaction details (Bitcoin Wallet address, Ethereum Wallet address and transaction ID) in the form. We need Ethereum wallet address so that we can transfer TOKEN coins to you.</li>
-                                        <li>Our team will verify the transaction and will send your TOKEN tokens within 48 hours which will be reflected in your wallet.</li>
+                                        <li>Upon transaction confirmation, please fill in your transaction details (Bitcoin Wallet address, Ethereum Wallet address and transaction ID) in the form. We need Ethereum wallet address so that we can transfer $EBT coins to you.</li>
+                                        <li>Our team will verify the transaction and will send your $EBT tokens within 48 hours which will be reflected in your wallet.</li>
                                     </ol>
                                     
                                 </div>
@@ -68,9 +68,9 @@
                                   <label class="col-2 label-control" for="projectinput1">BUY<span style="color:red;">*</span></label>
                                   <fieldset class="col-10">
                                     <div class="input-group">
-                                      <input type="text" class="form-control" data-rule-number="true" onkeyup="multiply()"  name="rowan" id="rowan" data-rule-min="1" data-msg-min="You have to buy minimum 1 TOKEN." data-rule-required="true" data-msg-required="Please enter value in digit." aria-describedby="basic-addon4" >
+                                      <input type="text" class="form-control" data-rule-number="true" onkeyup="multiply()"  name="rowan" id="rowan" data-rule-min="1" data-msg-min="You have to buy minimum 1 $EBT." data-rule-required="true" data-msg-required="Please enter value in digit." aria-describedby="basic-addon4" >
                                       <div class="input-group-append">
-                                        <span class="input-group-text" id="basic-addon4">TOKEN</span>
+                                        <span class="input-group-text" id="basic-addon4">$EBT</span>
                                       </div>
                                     </div>
                           
@@ -159,7 +159,7 @@
                           <label>
                             <input type="checkbox" value="">
                             <span class="cr"><i class="fa fa-check cr-icon"></i></span>
-                            I agree with <a href="">terms and conditions</a> of TOKEN.
+                            I agree with <a href="">terms and conditions</a> of $EBT.
                           </label>
                         </div>
                       </div>
