--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -93,7 +93,7 @@
                 <div class="upper-block-coin dashboard-box shadow-box" style="min-height: auto;height: 100%;">
                     <div style="width: 100%;">
                         <!-- <div class="header-block clearfix">
-                          <span class="name-side green-heading">TOKEN</span>
+                          <span class="name-side green-heading">$EBT</span>
                           <span class="logo-side"><img src="assets/images/buy-coin.png"></span>
                         </div> -->
                         <div class="artw-align">
@@ -103,7 +103,7 @@
                                 <span class="cr"><i class="cr-icon fa fa-check"></i></span>
                                 <div>
                                   <img src="assets/images/buy-coin.png">
-                                  TOKEN
+                                  $EBT
                                 </div>
                               </label>
                             </div>
