--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -39,13 +39,13 @@
                               <div class="col-md-4">
                                 <div class="form-group text-left">
                                   <label>Full Name</label>
-                                   <input class="form-control" name="name" type="text" placeholder="ABC">
+                                   <input class="form-control" name="name" type="text" value="<%=result.name%>" placeholder="ABC">
                                 </div>
                               </div>
                               <div class="col-md-4">
                                 <div class="form-group text-left">
                                   <label>Email ID</label>
-                                   <input class="form-control" name="email" type="email" placeholder="abc@gmail.com">
+                                   <input class="form-control" name="email" type="email" value="<%=result.email%>" placeholder="abc@gmail.com">
                                 </div>
                               </div>
                               <div class="col-md-4">
