--- a/views/receive.ejs
+++ b/views/receive.ejs
@@ -14,7 +14,7 @@
                  <div class="dashboard-box  wow slideInUp">
                      <div class="create-wallet-block">
 
-                            <h3 class="main-heading">Only receive TOKEN to this address sending any other digital asset, will result in permanent loss.</h3> 
+                            <h3 class="main-heading">Only receive $EBT to this address sending any other digital asset, will result in permanent loss.</h3> 
                           
                            
 
