--- a/views/send-uwct.ejs
+++ b/views/send-uwct.ejs
@@ -46,7 +46,7 @@
                             <input type="text" class="form-control bg-white" placeholder="0.00">
                             <div class="input-group-append">
                               
-                              <span class="input-group-text bg-white"><img src="assets/images/buy-coin.png" class="img-fluid " style="height: 20px;">&nbsp; TOKEN</span>
+                              <span class="input-group-text bg-white"><img src="assets/images/buy-coin.png" class="img-fluid " style="height: 20px;">&nbsp; $EBT</span>
                             </div>
                           </div>
                         </div>
@@ -58,7 +58,7 @@
                             <input type="text" class="form-control bg-white" placeholder="0.00">
                             <div class="input-group-append">
                               
-                              <span class="input-group-text bg-white"><img src="assets/images/buy-coin.png" class="img-fluid " style="height: 20px;">&nbsp; TOKEN</span>
+                              <span class="input-group-text bg-white"><img src="assets/images/buy-coin.png" class="img-fluid " style="height: 20px;">&nbsp; $EBT</span>
                             </div>
                           </div>
                         </div>
@@ -66,7 +66,7 @@
                   <div class="col-md-12">
                      <div class="text-center mlti-btn">
                         <button class="btn btn-common light-green">Cancel</button>
-                        <button class="btn btn-common light-green" data-toggle="modal" data-target="#keyModal">Send TOKEN</button>
+                        <button class="btn btn-common light-green" data-toggle="modal" data-target="#keyModal">Send $EBT</button>
                      </div>
                   </div>
                  </div>
