--- a/views/Earn.ejs
+++ b/views/Earn.ejs
@@ -17,11 +17,11 @@
                       <br>
 
 
-                           <h3 class="main-heading">Invite friends and  earn <br> free TOKEN ! </h3> 
+                           <h3 class="main-heading">Invite friends and  earn <br> free $EBT ! </h3> 
                           
                            
 
-                            <h4 class="green-heading mt-3">Each week highest TOKEN accumulator gets a free NFT <br> in their wallets</h4>
+                            <h4 class="green-heading mt-3">Each week highest $EBT accumulator gets a free NFT <br> in their wallets</h4>
                            
                           <div class="input-group input-dash copy-id-dash mt-3">
                              <input class="form-control" type="text" placeholder="" value="fhjf545353hdfhgkkljdaklj65jkl465lk4646">
