--- a/views/dash-private-key.ejs
+++ b/views/dash-private-key.ejs
@@ -35,7 +35,7 @@
                           <label>
                             <input type="checkbox" value="">
                             <span class="cr"><i class="fa fa-check cr-icon"></i></span>
-                            I agree with <a href="/terms-condition">terms and conditions</a> of TOKEN.
+                            I agree with <a href="/terms-condition">terms and conditions</a> of $EBT.
                           </label>
                         </div>
 
