--- a/views/referral-table.ejs
+++ b/views/referral-table.ejs
@@ -5,7 +5,7 @@
    <div class="heading-row mb-20">
     <div class="row align-item-center">
        <div class="col-lg-6">
-          <h3 class="page-title"><span class="page-title-icon bg-gradient-primary text-white mr-2"><i class="mdi mdi-account"></i></span> Referral <small>(All figures are in TOKEN)</small> </h3>
+          <h3 class="page-title"><span class="page-title-icon bg-gradient-primary text-white mr-2"><i class="mdi mdi-account"></i></span> Referral <small>(All figures are in $EBT)</small> </h3>
        </div>
         
   </div>
@@ -79,9 +79,9 @@
                                 <td width="15%">xyz</td>
                                 <td width="15%">ABCd</td>
                                 <td width="15%">27,Apr 2021, 6:45:54</td>
-                                <td width="10%">1000 TOKEN</td>
-                                <td width="10%">1000 TOKEN</td>
-                                <td width="10%">1000 TOKEN</td>
+                                <td width="10%">1000 $EBT</td>
+                                <td width="10%">1000 $EBT</td>
+                                <td width="10%">1000 $EBT</td>
                               </tr>
 
                               <tr>
@@ -90,9 +90,9 @@
                                 <td width="15%">xyz</td>
                                 <td width="15%">ABCd</td>
                                 <td width="15%">27,Apr 2021, 6:45:54</td>
-                                <td width="10%">1000 TOKEN</td>
-                                <td width="10%">1000 TOKEN</td>
-                                <td width="10%">1000 TOKEN</td>
+                                <td width="10%">1000 $EBT</td>
+                                <td width="10%">1000 $EBT</td>
+                                <td width="10%">1000 $EBT</td>
                               </tr>
 
 
@@ -102,9 +102,9 @@
                                 <td width="15%">xyz</td>
                                 <td width="15%">ABCd</td>
                                 <td width="15%">27,Apr 2021, 6:45:54</td>
-                                <td width="10%">1000 TOKEN</td>
-                                <td width="10%">1000 TOKEN</td>
-                                <td width="10%">1000 TOKEN</td>
+                                <td width="10%">1000 $EBT</td>
+                                <td width="10%">1000 $EBT</td>
+                                <td width="10%">1000 $EBT</td>
                               </tr>
 
 
@@ -114,9 +114,9 @@
                                 <td width="15%">xyz</td>
                                 <td width="15%">ABCd</td>
                                 <td width="15%">27,Apr 2021, 6:45:54</td>
-                                <td width="10%">1000 TOKEN</td>
-                                <td width="10%">1000 TOKEN</td>
-                                <td width="10%">1000 TOKEN</td>
+                                <td width="10%">1000 $EBT</td>
+                                <td width="10%">1000 $EBT</td>
+                                <td width="10%">1000 $EBT</td>
                               </tr>
 
             </tbody>
