--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,25 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=1.0, minimum-scale=1.0, maximum-scale=1.0">
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="assets/images/favicon.png">
+    <link rel="icon" type="image/png" href="../assets/images/favicon.png">
   <!-- Bootstrap Core CSS -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="assets/css/bootstrap-dropdownhover.min.css" rel="stylesheet"/>
+    <link href="../assets/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="../assets/css/bootstrap-dropdownhover.min.css" rel="stylesheet"/>
     <!-- slick CSS -->
-    <link href="assets/css/slick.css" rel="stylesheet"/>
-    <link href="assets/css/slick-theme.css" rel="stylesheet"/>
+    <link href="../assets/css/slick.css" rel="stylesheet"/>
+    <link href="../assets/css/slick-theme.css" rel="stylesheet"/>
   <!-- Animate CSS -->
-    <link href="assets/css/animate.css" rel="stylesheet"/>
+    <link href="../assets/css/animate.css" rel="stylesheet"/>
     <!-- hover-min CSS -->
-    <link href="assets/css/hover-min.css" rel="stylesheet"/>
+    <link href="../assets/css/hover-min.css" rel="stylesheet"/>
     <!-- yamm css -->
-    <link href="assets/css/yamm.css" rel="stylesheet"/>
+    <link href="../assets/css/yamm.css" rel="stylesheet"/>
     <!-- Font-awesome web fonts with css -->
-    <link href="assets/css/fontawesome-all.css" rel="stylesheet" type="text/css"/>
+    <link href="../assets/css/fontawesome-all.css" rel="stylesheet" type="text/css"/>
     <!-- Font-awesome web fonts with css -->
     <!-- loader css -->
-    <link href="assets/css/loader.css" rel="stylesheet"/>
-     <link href="assets/css/timeline.css" rel="stylesheet"/>
+    <link href="../assets/css/loader.css" rel="stylesheet"/>
+     <link href="../assets/css/timeline.css" rel="stylesheet"/>
   <!-- Custom CSS -->
    <!--  <link href="assets/css/custom-home-new.css" rel="stylesheet"/> -->
     <link href="/assets/css/custom-llc.css" rel="stylesheet"/>
@@ -36,7 +36,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;500;700;900&display=swap" rel="stylesheet">
 
-     <link rel="stylesheet" href="assets/css/jquery-ui.css" type="text/html">
+     <link rel="stylesheet" href="../assets/css/jquery-ui.css" type="text/html">
 
 </head>
 <body class="index-body">
@@ -49,7 +49,7 @@
         <nav class="navbar navbar-expand-lg navbar-light p-2">
             <a class="navbar-brand logo" href="">
                 
-                <h1><img src="assets/images/logo-white.png" class="color-logo" alt=" Logo"> &nbsp; ETHEREUM BUCKEYE TOKEN</h1>
+                <h1><img src="../assets/images/logo-white.png" class="color-logo" alt=" Logo"> &nbsp; ETHEREUM BUCKEYE TOKEN</h1>
                 
             </a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -94,14 +94,14 @@
               <div class="col-md-12">
                 <div class="banner-slider">
                     <div class="item">
-                        <img src="assets/images/banner.png" class="img-fluid">
+                        <img src="../assets/images/banner.png" class="img-fluid">
                          <div class="banner-inner-text">
                              <div>
                                   <h2>$EBT​: "THE PEOPLE'S COIN"</h2>
                                   <p>Ethereum Buckeye Token was formed by a group of local advocates in Cleveland Ohio with the intention of being a charitable token of choice on the ERC-20 black chain! We began as a small organic idea and have formed into a group large enough to advocate for EBT’s acceptance nationwide. “EBT ACCEPTED HERE” will soon be in businesses and organizations all over North America.</p>
                                   <div class="banner-btn">
                                     <a href="https://t.me/ETHEREUMBUCKEYETOKEN" target="_blank" class="purple-btn-index">Join Us Now</a>
-                                    <a href="assets/EBT-Litepaper.pdf" target="_blank" class="purple-btn-index">Litepaper</a>
+                                    <a href="../assets/EBT-Litepaper.pdf" target="_blank" class="purple-btn-index">Litepaper</a>
                                     </div>
                              </div>     
                          </div>
@@ -273,7 +273,7 @@
             </div>
             <div class="col-md-4">
             	<div class="about-img-big wow slideInRight">
-            		<img src="assets/images/logo-white.png" class="img-fluid">
+            		<img src="../assets/images/logo-white.png" class="img-fluid">
             	</div>
             </div>
         </div>
@@ -299,7 +299,7 @@
             </div>
             <div class="col-md-5 offset-md-1 ">
                 <div class="about-img wow slideInLeft">
-                    <img src="assets/images/img1.png" class="img-fluid">
+                    <img src="../assets/images/new-img/img1.png" class="img-fluid">
                 </div>
             </div>
         </div>
@@ -324,7 +324,7 @@
             </div>
             <div class="col-md-5">
             	<div class="about-img wow slideInRight">
-            		<img src="assets/images/new-img/img2.png" class="img-fluid">
+            		<img src="../assets/images/new-img/img2.png" class="img-fluid">
             	</div>
             </div>
         </div>
@@ -337,7 +337,7 @@
         <div class="row">
             <div class="col-md-10 m-auto ">
             	<div class="text-center">
-            		<img src="assets/images/new-img/graph.png" class="img-fluid w-100">
+            		<img src="../assets/images/new-img/graph.png" class="img-fluid w-100">
             	</div>
             </div>
         </div>
@@ -371,7 +371,7 @@
                         <p>July Q3</p>
                     </div>
                     <span class="ps-sp-bot">
-                        <img src="assets/images/logo-white.png" class="img-fluid">
+                        <img src="../assets/images/logo-white.png" class="img-fluid">
                     </span>
                 </li>
                 <li>
@@ -390,7 +390,7 @@
                         <p>AUG Q3</p>
                     </div>
                     <span class="ps-sp-bot">
-                        <img src="assets/images/logo-white.png" class="img-fluid">
+                        <img src="../assets/images/logo-white.png" class="img-fluid">
                     </span>
                 </li>
                 <li>
@@ -407,7 +407,7 @@
                         <p>SEPT Q3</p>
                     </div>
                     <span class="ps-sp-bot">
-                        <img src="assets/images/logo-white.png" class="img-fluid">
+                        <img src="../assets/images/logo-white.png" class="img-fluid">
                     </span>
                 </li>
                
@@ -437,7 +437,7 @@
             <div class="col-md-3">
             	<div class=" color-white">
             		<div class="team-box-new">
-            			<img src="assets/images/new-img/Abu_Bakar.jpeg" class="img-fluid">
+            			<img src="../assets/images/new-img/Abu_Bakar.jpeg" class="img-fluid">
             			<h5 class="sub-heading">Abu-Bakr Jackson</h5>
             			<p>Co-Founder and President</p>
             			<p>
@@ -450,7 +450,7 @@
             <div class="col-md-3">
                 <div class=" color-white">
                     <div class="team-box-new">
-                        <img src="assets/images/new-img/David_Dahabiyeh.jpeg" class="img-fluid">
+                        <img src="../assets/images/new-img/David_Dahabiyeh.jpeg" class="img-fluid">
                         <h5 class="sub-heading">David Dahabiyeh</h5>
                         <p>Co-Founder and Vice President</p>
                         <p>
@@ -463,7 +463,7 @@
            <div class="col-md-3">
                 <div class=" color-white">
                     <div class="team-box-new">
-                        <img src="assets/images/new-img/kind-soloman.png" class="img-fluid">
+                        <img src="../assets/images/new-img/kind-soloman.png" class="img-fluid">
                         <h5 class="sub-heading">Solomon X </h5>
                         <p>Community Engagement</p>
                         <p>
@@ -476,7 +476,7 @@
            <div class="col-md-3">
                 <div class=" color-white">
                     <div class="team-box-new">
-                        <img src="assets/images/new-img/JahX.jpeg" class="img-fluid">
+                        <img src="../assets/images/new-img/JahX.jpeg" class="img-fluid">
                         <h5 class="sub-heading">Jah X</h5>
                         <p>Charitable Coordinator</p>
                         <p>
@@ -489,7 +489,7 @@
             <div class="col-md-3">
                 <div class=" color-white">
                     <div class="team-box-new">
-                        <img src="assets/images/new-img/Levent-Taktas.jpeg" class="img-fluid">
+                        <img src="../assets/images/new-img/Levent-Taktas.jpeg" class="img-fluid">
                         <h5 class="sub-heading">Levent Tektas </h5>
                         <p>Graphic/NFT Designer</p>
                         <p>
@@ -502,7 +502,7 @@
              <div class="col-md-3">
                 <div class=" color-white">
                     <div class="team-box-new">
-                        <img src="assets/images/new-img/The-awakening-Agenda.png" class="img-fluid">
+                        <img src="../assets/images/new-img/The-awakening-Agenda.png" class="img-fluid">
                         <h5 class="sub-heading">The Awakening Agenda</h5>
                         <p>BIO of charity’s accomplishments</p>
                         <p>
@@ -515,7 +515,7 @@
             <div class="col-md-3">
                 <div class=" color-white">
                     <div class="team-box-new">
-                        <img src="assets/images/new-img/New-Era-Atlanta.jpeg" class="img-fluid">
+                        <img src="../assets/images/new-img/New-Era-Atlanta.jpeg" class="img-fluid">
                         <h5 class="sub-heading">Jalil Omowale-Bey  </h5>
                         <p>President and Chairman of New Era Atlanta </p>
                         <p>
@@ -587,20 +587,20 @@
 
 <a href="#" class="scroll_top" title="Scroll to Top" style="display: block;"><i class="fas fa-arrow-up"></i></a>
 	<!-- JQuery -->
-        <script type="text/javascript" src="assets/js/jquery-3.3.1.min.js"></script>
+        <script type="text/javascript" src="../assets/js/jquery-3.3.1.min.js"></script>
         <!-- <script type="text/javascript" src="assets/js/jquery-1.11.3.min.js"></script> -->
         <!-- Bootstrap Core JavaScript -->
-        <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="../assets/js/bootstrap.min.js"></script>
         <!-- dropdownhover effects JavaScript -->
-        <script type="text/javascript" src="assets/js/bootstrap-dropdownhover.min.js"></script>
+        <script type="text/javascript" src="../assets/js/bootstrap-dropdownhover.min.js"></script>
         <!-- wow JavaScript -->
-        <script type="text/javascript" src="assets/js/wow.min.js"></script>
+        <script type="text/javascript" src="../assets/js/wow.min.js"></script>
         <!-- slick JavaScript -->
-        <script type="text/javascript" src="assets/js/slick.js"></script>
-         <script type="text/javascript" src="assets/js/slick.min.js"></script>
+        <script type="text/javascript" src="../assets/js/slick.js"></script>
+         <script type="text/javascript" src="../assets/js/slick.min.js"></script>
 
         <!-- Custom JavaScript -->
-        <script type="text/javascript" src="assets/js/custom.js"></script>
+        <script type="text/javascript" src="../assets/js/custom.js"></script>
           <script type="text/javascript">
             $(".banner-slider").slick({
                 dots: true,
