--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,4 +1,8 @@
-<%- include('header') %>
+<% if(session.wallet){ %>
+  <%- include('header') %>
+ <% }else{ %>
+  <%- include('uheader') %>
+ <% }%>
 
   <div class="heading-row mb-20">
     <div class="row align-item-center">
