--- a/views/receive.ejs
+++ b/views/receive.ejs
@@ -27,7 +27,7 @@
                         </div> -->
 
                         <div class="input-group input-dash copy-id-dash">
-                            <input class="form-control" type="text" id="address" name="address" value="<%=walletdetails.wallet_address%>" placeholder="2798ehgdgdsghj9832q787ysuueh" readonly>
+                            <input class="form-control" type="text" id="address" name="address" value="<%=wallet_details.wallet_address%>" placeholder="" readonly>
                              <a onclick="myFunction()" href="javascript:void(0);"><i class="fa fa-copy"></i></a>
                         </div>
 
