--- a/views/header.ejs
+++ b/views/header.ejs
@@ -55,7 +55,7 @@
                 <a class="dropdown-item" href="/change-password">
                   <i class="mdi mdi-lock-reset mr-2"></i> Change Password</a>
                  
-                <a class="dropdown-item" href="/login">
+                <a class="dropdown-item" href="/signup">
                   <i class="mdi mdi-power mr-2"></i> Logout </a>
               </div>
             </li>
@@ -115,7 +115,7 @@
             </a>
           </li>
             <li class="nav-item">
-              <a class="nav-link" href="/login">
+              <a class="nav-link" href="/signup">
                 <span class="menu-title">logout</span>
                 <i class="mdi mdi-logout menu-icon"></i>
               </a>
