--- a/views/send-uwct.ejs
+++ b/views/send-uwct.ejs
@@ -23,7 +23,7 @@
                   <div class="col-md-6">
                     <div class="form-group">
                       <label>Withdraw From</label>
-                      <input type="text" class="form-control" readonly="" placeholder="54f6dsf7sdf8s7787f8778s87">
+                      <input type="text" class="form-control" readonly="" value="<%=wallet_details.wallet_address %>" placeholder="">
                     </div>
                   </div>
                   <div class="col-md-12">
