--- a/assets/css/custom-login.css
+++ b/assets/css/custom-login.css
@@ -3,8 +3,6 @@ html {
   }
   body{
       font-family: 'Inter', sans-serif;
-      background-color: #000000;
-  
   }
   .header-main {
       transition: 0.5s;
@@ -17,9 +15,9 @@ html {
       box-shadow: 2px 2px 10px rgba(0,0,0,0.2);
   }
   
-  /*.index-body .container{
+  .index-body .container{
       max-width: 1310px;
-  }*/
+  }
   .header-main.index-header .navbar .nav-link {
       position: relative;
       padding: 5px 22px 5px;
@@ -27,35 +25,30 @@ html {
       color: #fff !important;
       font-weight: 400;
   }
-  
-  .header-main.index-header.bg-color .navbar .nav-link{
-      color: #fff !important;
-  }
-  
-  .header-main.index-header .navbar .nav-link:hover, .header-main.index-header .navbar .active .nav-link {
+  .header-main.index-header .navbar .nav-link:hover,
+  .header-main.index-header .navbar .active .nav-link{
       font-weight: 600;
-      color: #D7B64D !important;
-  }
-  
-  .header-main.index-header .nav-link.sign-up-btn.purple-btn-index:hover,
-  .header-main.index-header .nav-link.sign-up-btn.purple-btn-index:focus,
-  .header-main.index-header .nav-link.sign-up-btn.purple-btn-index:active{
-  background-color: #fff !important;
   }
   
   .header-main.index-header.bg-color {
-     background-color: #000;
+      background: #371f74; /* Old browsers */
+  background: -moz-linear-gradient(left, #371f74 0%, #88158c 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(left, #371f74 0%,#88158c 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to right, #371f74 0%,#88158c 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
       box-shadow: 2px 2px 10px rgba(0,0,0,0.4);
       padding: 5px;
   }
   .header-main.index-header.bg-color{
-      background-color: #000;
+      background: #371f74;
+      background: -moz-linear-gradient(left, #5e5198 0%,#f53798 100%);
+      background: -webkit-linear-gradient(left, #5e5198 0%,#f53798 100%);
+      background: linear-gradient(to right, #5e5198 0%,#f53798 100%);
       box-shadow: 2px 2px 10px rgba(0,0,0,0.4);
       padding: 5px;
   }
   
-  .header-main.index-header .navbar-brand img {
-      height: 60px;
+  .header-main.index-header .navbar-brand img{
+    height: 85px;
   }
   .header-main.index-header.bg-color .navbar-brand img{
     height: 60px;
@@ -73,20 +66,19 @@ html {
       margin-left: 0px;
   }
   .header-main.index-header {
-      background-color: #000;
+      background-color: transparent;
       box-shadow: none;
-      padding: 5px 0;
-      border-bottom: 1px solid #2a2929;
+      padding: 20px 0;
   }
   .header-main.index-header .navbar {
       padding: 5px;
   }
   .sec-banner {
-      min-height: 100vh;
-      /*background-image: url(../images/new-img/banner.png);
-      background-size: cover;
+      height: 100vh;
+      background-image: url(../images/new-img/banner.png);
+      background-size: 100% 100%;
       background-position: top center;
-      background-repeat: no-repeat;*/
+      background-repeat: no-repeat;
       position: relative;
       overflow: hidden;
       display: flex;
@@ -96,29 +88,15 @@ html {
   }
   .sec-banner .slick-dotted.slick-slider {
       margin-bottom: 0;
-      padding-top: 95px;
+      padding-top: 30px;
   }
-  .banner-slider{
-      position: relative;
-  }
-  .banner-inner-text {
-      position: absolute;
-      left: 40px;
-      top: 0;
-      z-index: 100;
-      height: 75%;
-      display: flex;
-      align-items: center;
-      max-width: 32%!important;
-      flex-wrap: wrap;
-  }
+  
   .banner-inner-text h2 {
       color: #fff;
-      font-size: 38px;
+      font-size: 45px;
       line-height: 60px;
       margin-bottom: 80px;
-      margin-top: 75px;  
-      padding-top: 20px; 
+      margin-top: 75px;   
   }
   
   .banner-inner-text a span{
@@ -203,7 +181,7 @@ html {
   }
   .header-main {
       position: absolute;
-      top: 0px;
+      top: 42px;
   }
   .header-main.index-header.bg-color{
       position: fixed;
@@ -214,9 +192,8 @@ html {
   }
   .navbar-brand h1 {
       color: #fff;
-      font-size: 18px;
+      font-size: 28px;
       margin-bottom: 0;
-      font-weight: 600;
   }
   .sign-up-btn {
       text-align: center;
@@ -239,35 +216,33 @@ html {
       max-width: 700px;
   }
   .banner-inner-text h2 {
-      color: #D7B64D;
-      font-size: 28px;
-      line-height: 36px;
+      color: #fff;
+      font-size: 45px;
+      line-height: 60px;
       margin-bottom: 30px;
        margin-top: 0px; 
        font-weight: 600;
   }
-  .banner-inner-text p {
+  .banner-inner-text p{
       color: #fff;
       max-width: 600px;
-      font-size: 16px;
-      line-height: 26px;
-      padding-bottom: 00px;
-      font-weight: 500;
+      font-size: 14px;
+      line-height: 24px;
   }
-  
   .purple-btn-index {
-      background-color: #D7B64D;
+      background-color: #d5b44a  !important;
       display: inline-block;
-      padding: 10px 15px;
+      padding: 10px 25px;
       min-width: 100px;
-      color: #000 !important;
+      color: #fff !important;
       text-decoration: none !important;
       border-radius: 5px;
-      /* text-transform: uppercase; */
-      font-size: 16px;
-      font-weight: 600;
+      text-transform:uppercase;
+      font-size: 12px;
+      font-weight: 500;
       outline: none !important;
       border: none !important;
+  
   }
   .banner-btn{
   margin: 50px 0 0;
@@ -276,26 +251,24 @@ html {
       margin: 0 20px 0 0;
   }
   .main-heading-index-new {
-      text-align: left;
+      text-align: center;
       position: relative;
   }
   .main-heading-index-new span {
-      color: #D7B64D;
-      font-size: 125px;
+      color: #efefef;
+      font-size: 83px;
       text-transform: uppercase;
-      font-weight: 700;
-      opacity: 0.2;
+      font-weight: 600;
   }
   .main-heading-index-new b {
       position: absolute;
       z-index: 100;
-      left: 49px;
+      left: 0;
       right: 0;
-      bottom: 35px;
+      top: 37px;
       text-transform: uppercase;
-      font-size: 18px;
+      font-size: 26px;
       font-weight: 600;
-      color: #D7B64D;
   }
   .small-heading {
       font-size: 14px;
@@ -312,12 +285,18 @@ html {
       line-height: 26px;
       margin-bottom: 24px;
   }
+  
   p {
       font-size: 14px;
-      font-weight: 500;
+      font-weight: 600;
       line-height: 22px;
       color: #fff;
   }
+  
+  .login-sec p a{
+  color: #fff !important;
+  }
+  
   .about-text-inner{
   text-align: justify;
   max-width: 650px;
@@ -326,8 +305,14 @@ html {
       max-width: 400px;
       margin: 0 auto;
   }
-  .rocket-fuel-sec {
-      padding: 90px 0 70px;
+  .rocket-fuel-sec{
+      background-color: #322B5E;
+      padding: 50px 0 70px;
+      background: #6068a7; /* Old browsers */
+      background: #6068a7; /* Old browsers */
+  background: -moz-radial-gradient(center, ellipse cover, #6068a7 0%, #6068a7 0%, #322b5e 40%, #322b5e 40%, #322b5e 45%); /* FF3.6-15 */
+  background: -webkit-radial-gradient(center, ellipse cover, #6068a7 0%,#6068a7 0%,#322b5e 40%,#322b5e 40%,#322b5e 45%); /* Chrome10-25,Safari5.1-6 */
+  background: radial-gradient(ellipse at center, #6068a7 0%,#6068a7 0%,#322b5e 40%,#322b5e 40%,#322b5e 45%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   }
   .color-white{
       color: #eee !important;
@@ -350,30 +335,11 @@ html {
   }
   .team-box-new{
       margin: 30px ;
-      text-align: center;
   }
-  .team-box-new img {
+  .team-box-new img{
       border-radius: 50%;
-      height: 125px;
+      height: 60px;
       margin-bottom: 30px;
-      max-width: 125px;
-      object-fit: cover;
-  }
-  .team-box-new  .sub-heading {
-      font-size: 18px;
-      font-weight: 500;
-      line-height: 24px;
-      margin-bottom: 5px;
-      color: #D7B64D;
-  }
-  .team-box-new p{
-      font-style: italic;
-  }
-  .team-box-new p a{
-      color: #D7B64D;
-      font-size: 18px;
-      display: inline-block;
-      margin: 0 5px;
   }
   .contact-us-new{
       padding: 50px 0;
@@ -421,8 +387,8 @@ html {
       margin-bottom: 18px;
   }
   .footer-box {
-      background-color: #000;
-      padding: 20px 0;
+      background-color: #322B5E;
+      padding: 30px 0;
   }
   .footer-box .extra-links ul {
       padding-left: 0;
@@ -432,7 +398,6 @@ html {
       display: inline-block;
       padding: 0 30px 0 0;
       font-size: 14px;
-      margin-bottom: 0;
   }
   .footer-box .extra-links ul li a {
       color: #fff;
@@ -451,22 +416,15 @@ html {
   }
   .copy-right p {
       margin-bottom: 0;
-      font-size: 14px;
-      color: #d7b64d;
-      margin-top: 0px;
-      text-align: center;
-      font-weight: 500;
+      font-size: 12px;
+      color: #eee;
+      margin-top: 30px;
   }
-  .copy-right p a{
-      color: #d7b64d;
-      text-decoration: underline;
-  }
-  
   .align-item-center{
     align-items: center;
   }
   .about-us {
-      padding: 95px 0 40px;
+      padding: 50px 0 40px;
   }
   .scroll_top {
       right: 90px;
@@ -494,7 +452,7 @@ html {
   .navbar-light .navbar-toggler {
       outline: none;
       box-shadow: none;
-      background-color: #d7b64d;
+      background-color: #f43798;
       padding: 5px 10px;
   }
   .login-form-box{
@@ -506,21 +464,28 @@ html {
       text-transform: uppercase;
       font-size: 36px;
       margin-bottom: 20px;
+      color: #fff;
   }
   .login-form-box label {
       font-size: 14px;
       text-transform: uppercase;
-      margin-bottom: 0;
+      margin-bottom: 5px;
+      color: #fff;
   }
   .login-form-box .form-control {
       border: none;
-      border-bottom: 3px solid #585858;
+      background-color: transparent !important;
+      border-bottom: 2px solid #fff;
       border-radius: 0;
       padding: 0px 0 5px;
-      font-size: 14px;
+      font-size: 16px;
       font-weight: 600;
       outline: none;
       box-shadow: none;
+      color: #fff;
+  }
+  .login-form-box .form-control::placeholder{
+      color: #fff;
   }
   .login-form-box p a {
       color: #000;
@@ -529,7 +494,7 @@ html {
   .login-form-box p.forgot-link a {
       text-decoration: underline;
       font-size: 18px;
-      color: #ababab;
+      color: #fff !important;
       font-weight: 400;
   }
   .login-form-box .purple-btn-index {
@@ -537,14 +502,15 @@ html {
       padding: 10px 60px;
   }
   .login-sec {
+      background-color: #343434;
       padding-top: 10%;
       height: 100vh;
-      background-image: url(../images/new-img/login-bg.png);
-      background-size: cover;
-      background-position: center;
+      background-image: url(../images/bg-login.png);
+      background-size: contain;
+      background-position: top right 15%;
       background-repeat: no-repeat;
       display: flex;
-      align-items: flex-end;
+      align-items: center;
       justify-content: center;
   }
   .logo-box{
@@ -557,7 +523,7 @@ html {
       font-size: 30px;
       font-weight: 600;
   }
-  .logo-box img{
+  .logo-box img {
       height: 75px;
   }
   
