--- a/public/assets/css/custom-art-dash.css
+++ b/public/assets/css/custom-art-dash.css
@@ -1,4 +1,4 @@
-x`
+/* x` */
 /** main css **/
 body {
     font-family: 'Quicksand', sans-serif;
@@ -108,7 +108,7 @@ outline: none;
 }
 #mySidenav ul li a{
    color: #fff;
-   font-family: ;
+   /* font-family: ""; */
    font-size: 14px;
    padding: 10px 20px;
    display: block;
