--- a/public/assets/css/custom-llc copy.css
+++ b/public/assets/css/custom-llc copy.css
@@ -83,10 +83,10 @@ background-color: #fff !important;
 }
 .sec-banner {
     min-height: 100vh;
-    background-image: url(../images/banner.png);
+    /*background-image: url(../images/new-img/banner.png);
     background-size: cover;
     background-position: top center;
-    background-repeat: no-repeat;
+    background-repeat: no-repeat;*/
     position: relative;
     overflow: hidden;
     display: flex;
