--- a/views/forgot-pass.ejs
+++ b/views/forgot-pass.ejs
@@ -26,7 +26,7 @@
     <link href="assets/css/loader.css" rel="stylesheet"/>
   <!-- Custom CSS -->
    <!--  <link href="assets/css/custom-home-new.css" rel="stylesheet"/> -->
-    <link href="assets/css/custom-llc.css" rel="stylesheet"/>
+    <link href="assets/css/custom-login.css" rel="stylesheet"/>
  
 
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
