Landing page modified

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -53,7 +53,7 @@
                     <h4 class="font-weight-normal mb-3">USDT (TRC20) 
                     </h4>
                     <img src="assets/images/tether.png" class="img-fluid icon-img">
-                    <h2 class="mb-5">USDT 10</h2>
+                    <h2 class="mb-5"></h2>
                   </div>
                 </div>
               </div>
