--- a/views/index.ejs
+++ b/views/index.ejs
@@ -97,7 +97,7 @@
                         <a class="nav-link" href="#contact">Contact Us</a>
                     </li>
                      <li class="nav-item">
-                        <a class="nav-link sign-up-btn purple-btn-index" href="">Login</a>
+                        <a class="nav-link sign-up-btn purple-btn-index" href="login">Login</a>
                     </li>
                   
                 </ul>
