--- a/views/admin/front-admin/add-new-blog.ejs
+++ b/views/admin/front-admin/add-new-blog.ejs
@@ -8,7 +8,7 @@
         <div class="col-lg-6">
          <div class="text-right">
            <div>
-             <a href="blog-list.php" class="btn btn-common bg-gradient-primary">Go Back</a>
+             <a href="blog-list.ejs" class="btn btn-common bg-gradient-primary">Go Back</a>
            </div>
          </div>
        </div>
